; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_rtc.c_rtc_time.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_rtc.c_rtc_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @rtc_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtc_time(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tm, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 @time(i32* %4)
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = call i32 @localtime_r(i32* %4, %struct.tm* %3)
  %10 = call i32 @timegm(%struct.tm* %3)
  store i32 %10, i32* %4, align 4
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @localtime_r(i32*, %struct.tm*) #1

declare dso_local i32 @timegm(%struct.tm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
